--- a/1.html
+++ b/1.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 </head>
 
-<body style="margin: 0;">
+<body style="margin: 0; line-height:150%;">
 
 <div id="jpedal" style="overflow: hidden; position: relative; width: 909px; height: 18405px;">
 
@@ -1455,37 +1455,37 @@
 #t13h_1{left:455px;top:16498px;letter-spacing:-0.1px;word-spacing:0.2px;}
 
 .s1_1{
-	FONT-SIZE: 67.2px;
+	FONT-SIZE: 77.2px;
 	FONT-FAMILY: FNZOHG-TimesNewRomanPSMT1;
 	color: rgb(0,0,0);
 }
 
 .s6_1{
-	FONT-SIZE: 61.1px;
+	FONT-SIZE: 71.1px;
 	FONT-FAMILY: FNZOHG-TimesNewRomanPSMT_21;
 	color: rgb(0,0,0);
 }
 
 .s3_1{
-	FONT-SIZE: 67.2px;
+	FONT-SIZE: 77.2px;
 	FONT-FAMILY: FNZOHG-TimesNewRomanPS-BoldMT1;
 	color: rgb(0,0,0);
 }
 
 .s4_1{
-	FONT-SIZE: 67.2px;
+	FONT-SIZE: 77.2px;
 	FONT-FAMILY: FNZOHG-TimesNewRomanPS-Itali_21;
 	color: rgb(0,0,0);
 }
 
 .s7_1{
-	FONT-SIZE: 61.1px;
+	FONT-SIZE: 71.1px;
 	FONT-FAMILY: FNZOHG-TimesNewRomanPSMT1;
 	color: rgb(0,0,0);
 }
 
 .s5_1{
-	FONT-SIZE: 61.1px;
+	FONT-SIZE: 71.1px;
 	FONT-FAMILY: FNZOHG-TimesNewRomanPS-BoldIta1;
 	color: rgb(0,0,0);
 }
@@ -1497,7 +1497,7 @@
 }
 
 .s2_1{
-	FONT-SIZE: 61.1px;
+	FONT-SIZE: 71.1px;
 	FONT-FAMILY: FNZOHG-TimesNewRomanPS-Itali_21;
 	color: rgb(0,0,0);
 }
